--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- header part start -->
     <header class="container mx-auto">
       <!-- nav part start -->
-      <nav class="lg:p-14">
+      <nav class="lg:py-14 py-6">
         <div class="navbar bg-base-100">
           <div class="navbar-start">
             <div class="dropdown">
@@ -91,11 +91,51 @@
           </div>
           <div class="navbar-end">
             <i class="fa-solid fa-magnifying-glass mr-6 hidden lg:block"></i>
-            <a class="btn bg-primary text-white">Get Ticket</a>
+            <a class="btn bg-primary text-white font-bold">Get Ticket</a>
           </div>
         </div>
       </nav>
       <!-- nav part end -->
+      <!-- banner/slider part start -->
+      <section class="px-5 lg:relative">
+        <div class="carousel w-full">
+            <div id="slide1" class="carousel-item relative w-full">
+              <img src="images/banner1.png" class="w-full rounded-3xl" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide4" class="btn btn-circle bg-black border-black text-white">❮</a> 
+                <a href="#slide2" class="btn btn-circle bg-black border-black text-white">❯</a>
+              </div>
+            </div> 
+            <div id="slide2" class="carousel-item relative w-full">
+              <img src="images/banner2.jpg" class="w-full rounded-3xl" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle bg-black border-black text-white">❮</a> 
+                <a href="#slide3" class="btn btn-circle bg-black border-black text-white">❯</a>
+              </div>
+            </div> 
+            <div id="slide3" class="carousel-item relative w-full">
+              <img src="images/banner3.jpg" class="w-full rounded-3xl" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle bg-black border-black text-white">❮</a> 
+                <a href="#slide4" class="btn btn-circle bg-black border-black text-white">❯</a>
+              </div>
+            </div> 
+            <div id="slide4" class="carousel-item relative w-full">
+              <img src="images/banner4.jpg" class="w-full rounded-3xl" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle bg-black border-black text-white">❮</a> 
+                <a href="#slide1" class="btn btn-circle bg-black border-black text-white">❯</a>
+              </div>
+            </div>
+          </div>
+          <div class="lg:absolute lg:bottom-10 lg:right-12 card px-6 bg-black lg:w-1/3 bg-base-100 shadow-xl">
+            <div class="card-body bg-black rounded-3xl text-white">
+              <h2 class="card-title">Meet all the heroes from the field</h2>
+              <p class="font-semibold text-gray-400 font-medium leading-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+          </div>
+      </section>
+      <!-- banner/slider part end -->
     </header>
     <!-- header part end -->
     <!-- main part start -->
