--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
           </div>
           <div class="lg:absolute lg:bottom-10 lg:right-12 card px-6 bg-black lg:w-1/3 bg-base-100 shadow-xl">
             <div class="card-body bg-black rounded-3xl text-white">
-              <h2 class="card-title">Meet all the heroes from the field</h2>
-              <p class="font-semibold text-gray-400 font-medium leading-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+              <h2 class="card-title text-lg lg:text-2xl">Meet all the heroes from the field</h2>
+              <p class="font-semibold text-gray-400 text-sm lg:text-base font-medium leading-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
           </div>
       </section>
@@ -139,7 +139,42 @@
     </header>
     <!-- header part end -->
     <!-- main part start -->
-    <main class="container mx-auto"></main>
+    <main class="container mx-auto my-24 px-10">
+        <!--! professional club part start -->
+        <section class="container mx-auto px-5">
+            <div class="text-center border-y-2 border-dashed py-6">
+                <h3 class="text-3xl font-extrabold text-heading">Professional Hockeys Club</h3>
+                <p class="font-medium leading-6 text-secondary lg:w-1/2 mx-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <div class="grid lg:grid-cols-4 grid-cols-1 lg:gap-20 mt-12 mb-16">
+                <!-- first radial -->
+                <div class="text-center space-y-6 mt-4">
+                    <div class="radial-progress text-primary" style="--value:87;" role="progressbar">87%</div>
+                    <h5 class="text-xl text-heading font-semibold">Prayer Facility</h5>
+                    <p class="leading-6 text-secondary">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+                <!-- second radial -->
+                <div class="text-center space-y-6 mt-4">
+                    <div class="radial-progress text-success text-3xl" style="--value:95;" role="progressbar">95%</div>
+                    <h5 class="text-xl text-heading font-semibold">Prayer Facility</h5>
+                    <p class="leading-6 text-secondary">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+                <!-- third radial -->
+                <div class="text-center space-y-6 mt-4">
+                    <div class="radial-progress text-warning" style="--value:90;" role="progressbar">90%</div>
+                    <h5 class="text-xl text-heading font-semibold">Prayer Facility</h5>
+                    <p class="leading-6 text-secondary">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+                <!-- fourth radial -->
+                <div class="text-center space-y-6 mt-4">
+                    <div class="radial-progress text-info" style="--value:80;" role="progressbar">80%</div>
+                    <h5 class="text-xl text-heading font-semibold">Prayer Facility</h5>
+                    <p class="leading-6 text-secondary">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+            </div>
+        </section>
+        <!--! professional club part end -->
+    </main>
     <!-- main part end -->
     <!-- footer part start -->
     <footer></footer>
