--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               primary: "#FF4240",
               secondary: "#13131899",
               heading: "#131318",
+              frt: "#FFFFFF99",
             },
           },
         },
@@ -177,7 +178,57 @@
     </main>
     <!-- main part end -->
     <!-- footer part start -->
-    <footer></footer>
+    <footer class="bg-heading px-5 lg:text-start text-center items-center">
+        <nav class="container mx-auto py-24 lg:flex justify-between">
+            <aside class="space-y-5 mr-30">
+                <h3 class="text-3xl font-extrabold text-white">Get In Touch</h3>
+                <p class="text-gray-400">Dit amet consectetur. Condimentum <br>
+                adipiscing aliquam turpis placerat dolor. Purus <br>
+                urna in sit nullam proin. </p>
+                <div class="space-y-4">
+                    <div class="flex gap-4 items-center lg:justify-start justify-center">
+                        <i class="fa-regular fa-envelope text-primary"></i>
+                        <p class="font-medium text-gray-400">hockeys@support.com</p>
+                    </div>
+                    <div class="flex gap-4 items-center lg:justify-start justify-center">
+                        <i class="fa-solid fa-phone text-primary"></i>
+                        <p class="font-medium text-gray-400">(+62) 123-321-543</p>
+                    </div>
+                </div>
+              </aside> 
+              <div class="lg:flex flex lg:gap-52 justify-between lg:pt-0 pt-5">
+                <nav class="space-y-6">
+                    <header class=" text-white text-lg font-bold">Company</header> 
+                    <ul class="space-y-4">
+                        <li><a class="link link-hover text-gray-400">About us</a></li>
+                        <li><a class="link link-hover text-gray-400">Leadership</a></li>
+                        <li><a class="link link-hover text-gray-400">Careers</a></li>
+                        <li><a class="link link-hover text-gray-400">News & Article</a></li>
+                        <li><a class="link link-hover text-gray-400">Legal Notice</a></li>
+                    </ul>
+                  </nav> 
+                  <nav class="space-y-6">
+                    <header class=" text-white text-lg font-bold">Support</header> 
+                    <ul class="space-y-4">
+                        <li><a class="link link-hover text-gray-400">Help Center</a></li>
+                        <li><a class="link link-hover text-gray-400">FAQ</a></li>
+                        <li><a class="link link-hover text-gray-400">Ticket Support</a></li>
+                        <li><a class="link link-hover text-gray-400">Contact Us</a></li>
+                    </ul>
+                  </nav> 
+              </div>
+              <nav class="space-y-6">
+                <header class=" text-white text-lg font-bold pt-5 lg:pt-0">Service</header> 
+                <ul class="space-y-4">
+                    <li><a class="link link-hover text-gray-400">Academy</a></li>
+                    <li><a class="link link-hover text-gray-400">Group Lesson</a></li>
+                    <li><a class="link link-hover text-gray-400">Private Lesson</a></li>
+                    <li><a class="link link-hover text-gray-400">Hockeys for kids</a></li>
+                    <li><a class="link link-hover text-gray-400">Hockeys for Adult</a></li>
+                </ul>
+              </nav>
+        </nav>
+    </footer>
     <!-- footer part end -->
   </body>
 </html>
