clints questions part completed

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </head>
   <body class="font-manrope">
     <!-- header part start -->
-    <header class="container mx-auto hidden">
+    <header class="container mx-auto">
       <!-- nav part start -->
       <nav class="lg:py-14 py-6">
         <div class="navbar bg-base-100">
@@ -142,7 +142,7 @@
     <!-- main part start -->
     <main class="container mx-auto my-24 px-10 lg:px-0">
         <!-- professional club part start -->
-        <section class="container mx-auto px-5">
+        <section class="px-5">
             <div class="text-center border-y-2 border-dashed py-6">
                 <h3 class="lg:text-3xl text-2xl font-extrabold text-heading">Professional Hockeys Club</h3>
                 <p class="font-medium leading-6 text-secondary lg:w-1/2 mx-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
@@ -175,8 +175,8 @@
             </div>
         </section>
         <!-- professional club part end -->
-        <!--! program part start -->
-        <section class="container mx-auto my-24 ">
+        <!-- program part start -->
+        <section class="my-24 ">
           <div class="text-center border-y-2 border-dashed py-6">
             <h3 class="lg:text-3xl text-2xl font-extrabold text-heading">Program Sections</h3>
             <p class="font-medium leading-6 text-secondary lg:w-1/2 mx-auto my-7">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
@@ -201,11 +201,89 @@
           </div>
         </div>
         </section>
-        <!--! program part end -->
+        <!-- program part end -->
+        <!--! clint's question part start -->
+        <section class="my-24">
+          <div class="text-center border-y-2 border-dashed py-6">
+            <h3 class="lg:text-3xl text-2xl font-extrabold text-heading">Clients Question</h3>
+            <p class="font-medium leading-6 text-secondary lg:w-1/2 mx-auto my-7">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+        <div class="mt-12 border-2 rounded-xl p-8 grid lg:grid-cols-2 grid-cols-1">
+          <div>
+            <img src="images/11.png"alt="">
+          </div>
+          <div>
+            <div class="collapse collapse-plus border-b-2 rounded-none">
+              <input type="radio" name="my-accordion-3" checked="checked" /> 
+              <div class="collapse-title text-xl font-bold text-heading">
+                Our Equipment
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-gray-400">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus border-b-2 rounded-none">
+              <input type="radio" name="my-accordion-3" /> 
+              <div class="collapse-title text-xl font-bold text-heading">
+                Hockey Training
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-gray-400">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus border-b-2 rounded-none">
+              <input type="radio" name="my-accordion-3" /> 
+              <div class="collapse-title text-xl font-bold text-heading">
+                Private Lessons
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-gray-400">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus border-b-2 rounded-none">
+              <input type="radio" name="my-accordion-3" /> 
+              <div class="collapse-title text-xl font-bold text-heading">
+                Ski Touring
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-gray-400">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus border-b-2 rounded-none">
+              <input type="radio" name="my-accordion-3" /> 
+              <div class="collapse-title text-xl font-bold text-heading">
+                Booking
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-gray-400">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus border-b-2 rounded-none">
+              <input type="radio" name="my-accordion-3" /> 
+              <div class="collapse-title text-xl font-bold text-heading">
+                Pricings
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-gray-400">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus border-b-2 rounded-none">
+              <input type="radio" name="my-accordion-3" /> 
+              <div class="collapse-title text-xl font-bold text-heading">
+                Coaching
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-gray-400">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+          
+        </div>
+        </section>
+        <!--! clint's question part end -->
     </main>
     <!-- main part end -->
     <!-- footer part start -->
-    <footer class="bg-heading px-5 lg:text-start text-center items-center hidden">
+    <footer class="bg-heading px-5 lg:text-start text-center items-center">
         <nav class="container mx-auto py-24 lg:flex justify-between">
             <aside class="space-y-5 mr-30">
                 <h3 class="text-3xl font-extrabold text-white">Get In Touch</h3>
