--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="lg:absolute lg:bottom-10 lg:right-12 card px-6 bg-black lg:w-1/3 bg-base-100 shadow-xl">
             <div class="card-body bg-black rounded-3xl text-white">
               <h2 class="card-title text-lg lg:text-2xl">Meet all the heroes from the field</h2>
-              <p class="font-semibold text-gray-400 text-sm lg:text-base font-medium leading-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+              <p class="font-semibold text-gray-400 text-sm lg:text-baseleading-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
           </div>
       </section>
@@ -202,12 +202,12 @@
         </div>
         </section>
         <!-- program part end -->
-        <!--! clint's question part start -->
+        <!-- clint's question part start -->
         <section class="my-24">
           <div class="text-center border-y-2 border-dashed py-6">
             <h3 class="lg:text-3xl text-2xl font-extrabold text-heading">Clients Question</h3>
             <p class="font-medium leading-6 text-secondary lg:w-1/2 mx-auto my-7">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
-        </div>
+          </div>
         <div class="mt-12 border-2 rounded-xl p-8 grid lg:grid-cols-2 grid-cols-1">
           <div>
             <img src="images/11.png"alt="">
@@ -276,10 +276,82 @@
                 <p class="text-gray-400">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
               </div>
             </div>
-          
-        </div>
+          </div>
         </section>
-        <!--! clint's question part end -->
+        <!-- clint's question part end -->
+        <!-- get in touch part start -->
+        <section class="my-24">
+          <div class="text-center border-y-2 border-dashed py-6">
+            <h3 class="lg:text-3xl text-2xl font-extrabold text-heading">Get In Touch</h3>
+            <p class="font-medium leading-6 text-secondary lg:w-1/2 mx-auto my-7">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          </div>
+
+          <div class="my-12 grid grid-cols-1 lg:grid-cols-2 gap-7">
+            <!-- location part -->
+            <div class="lg:p-12 p-3 border-2 rounded-xl grid gap-6">
+              <div class="px-8 py-10 bg-[#BCED6D1A] space-y-6 rounded-xl">
+                <img src="images/call.png" alt="">
+                <p class="text-gray-400">Phone Number:</p>
+                <h3 class="text-heading text-lg font-extrabold">(+62) 123-321-543</h3>
+              </div>
+              <div class="px-8 py-10 bg-[#FDDD5F1A] space-y-6 rounded-xl">
+                <img src="images/message.png" alt="">
+                <p class="text-gray-400">Email:</p>
+                <h3 class="text-heading text-lg font-extrabold">hockeys@support.com</h3>
+              </div>
+              <div class="px-8 py-10 bg-[#629CF31A] space-y-6 rounded-xl">
+                <img src="images/location.png" alt="">
+                <p class="text-gray-400">Location:</p>
+                <h3 class="text-heading text-lg font-extrabold">152/1 Mohakhali Wireless Gate</h3>
+              </div>
+            </div>
+            <!-- input part -->
+              <div class=" bg-white">
+                <form action="#" method="POST" class="mx-auto">
+                  <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
+                    <div>
+                      <label for="first-name" class="block text-2xl leading-6 text-heading font-bold">Your Name</label>
+                      <div class="mt-2.5">
+                        <input type="text" name="first-name" id="first-name" autocomplete="given-name" class="block w-full rounded-xl border-none px-3.5 py-5 bg-gray-50 text-gray-900 placeholder='Enter your name' ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 sm:text-sm sm:leading-6">
+                      </div>
+                    </div>
+                    <div>
+                      <label for="last-name" class="block text-2xl leading-6 text-heading font-bold">Your Email</label>
+                      <div class="mt-2.5">
+                        <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="block w-full rounded-xl border-none px-3.5 py-5 bg-gray-50 text-gray-900 placeholder='Enter your name'  ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 sm:text-sm sm:leading-6">
+                      </div>
+                    </div>
+                    <div>
+                      <label for="last-name" class="block text-2xl leading-6 text-heading font-bold">Subject</label>
+                      <div class="mt-2.5">
+                        <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="block w-full rounded-xl border-none px-3.5 py-5 bg-gray-50 text-gray-900 placeholder='Enter your name'  ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 sm:text-sm sm:leading-6">
+                      </div>
+                    </div>
+                    <div>
+                      <label for="last-name" class="block text-2xl leading-6 text-heading font-bold">Phone Number</label>
+                      <div class="mt-2.5">
+                        <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="block w-full rounded-xl border-none px-3.5 py-5 bg-gray-50 text-gray-900 placeholder='Enter your name'  ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 sm:text-sm sm:leading-6">
+                      </div>
+                    </div>
+                    <div class="sm:col-span-2">
+                      <label for="message" class="block text-2xl leading-6 text-heading font-bold">Message</label>
+                      <div class="mt-2.5">
+                        <textarea name="message" id="message" rows="19" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 sm:text-sm sm:leading-6"></textarea>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="mt-10">
+                    <button class="btn bg-primary w-full text-xl font-bold text-white">Send Message</button>
+                  </div>
+                </form>
+              </div>
+          </div>
+          <!-- social media -->
+          <div class="text-center bg-gray-100 py-9 rounded-lg">
+            <h3 class="font-bold text-xl text-heading">Social Media</h3>
+          </div>
+        </section>
+        <!-- get in touch part end -->
     </main>
     <!-- main part end -->
     <!-- footer part start -->
