fixing dummy text

--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
             <p
               class="font-semibold text-gray-400 text-sm lg:text-baseleading-6"
             >
-              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-              turpis placerat dolor. Purus urna in sit nullam proin.
+              Here are some of our winning pictures. you can see .
+              Official hockey equipment and goalkeeping kit supplier is The Hockey Centre.
             </p>
           </div>
         </div>
@@ -249,8 +249,7 @@
             Professional Hockeys Club
           </h3>
           <p class="font-medium leading-6 text-secondary lg:w-1/2 mx-auto">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            Hockey Camps provide both members and non-members the opportunity to get active, have fun, learn and develop under the expert guidance of our professional coaches
           </p>
         </div>
         <div class="grid lg:grid-cols-4 grid-cols-1 lg:gap-20 mt-12 mb-16">
@@ -265,7 +264,7 @@
             </div>
             <h5 class="text-xl text-heading font-semibold">Prayer Facility</h5>
             <p class="leading-6 text-secondary">
-              Amet consectetur. Condimentum dignissim adipiscing .
+              Official hockey equipment and goalkeeping kit supplier is The Hockey Centre.
             </p>
           </div>
           <!-- second radial -->
@@ -279,7 +278,7 @@
             </div>
             <h5 class="text-xl text-heading font-semibold">Prayer Facility</h5>
             <p class="leading-6 text-secondary">
-              Amet consectetur. Condimentum dignissim adipiscing .
+              Official hockey equipment and goalkeeping kit supplier is The Hockey Centre.
             </p>
           </div>
           <!-- third radial -->
@@ -293,7 +292,7 @@
             </div>
             <h5 class="text-xl text-heading font-semibold">Prayer Facility</h5>
             <p class="leading-6 text-secondary">
-              Amet consectetur. Condimentum dignissim adipiscing .
+              Official hockey equipment and goalkeeping kit supplier is The Hockey Centre.
             </p>
           </div>
           <!-- fourth radial -->
@@ -307,7 +306,7 @@
             </div>
             <h5 class="text-xl text-heading font-semibold">Prayer Facility</h5>
             <p class="leading-6 text-secondary">
-              Amet consectetur. Condimentum dignissim adipiscing .
+              Official hockey equipment and goalkeeping kit supplier is The Hockey Centre.
             </p>
           </div>
         </div>
@@ -320,8 +319,7 @@
             Program Sections
           </h3>
           <p class="font-medium leading-6 text-secondary lg:w-1/2 mx-auto my-7">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            We are an inclusive hockey club that welcomes all who want to play hockey and be part of a thriving local sports club.
           </p>
         </div>
         <div class="mt-12">
@@ -333,9 +331,7 @@
                 Junior Program
               </h3>
               <p class="font-medium leading-6 text-white">
-                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                elit enim sagittis turpis in magna. Id et sed euismod natoque
-                amet nunc morbi nulla. Tortor congue sed et in.
+                We are an inclusive hockey club that welcomes all who want to play hockey and be part of a thriving local sports club.We are an inclusive hockey club that welcomes all who want to play hockey and be part of a thriving local sports club.
               </p>
               <button
                 class="btn bg-primary border-none text-white font-bold text-xl"
@@ -350,9 +346,7 @@
                 Junior Program
               </h3>
               <p class="font-medium leading-6 text-white">
-                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                elit enim sagittis turpis in magna. Id et sed euismod natoque
-                amet nunc morbi nulla. Tortor congue sed et in.
+                We are an inclusive hockey club that welcomes all who want to play hockey and be part of a thriving local sports club.We are an inclusive hockey club that welcomes all who want to play hockey and be part of a thriving local sports club.
               </p>
               <button
                 class="btn bg-primary border-none text-white font-bold text-xl"
@@ -368,11 +362,7 @@
               Junior Program
             </h3>
             <p class="font-medium leading-6 text-white">
-              Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
-              <br />
-              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc
-              <br />
-              morbi nulla. Tortor congue sed et in.
+              We are an inclusive hockey club that welcomes all who want to play hockey <br> and be part of a thriving local sports club.We are an inclusive hockey <br>club that welcomes all who want to play hockey and be part of a thriving local sports club.
             </p>
             <button
               class="btn bg-primary border-none text-white font-bold text-xl"
@@ -390,8 +380,9 @@
             Our New Products
           </h3>
           <p class="font-medium leading-6 text-secondary lg:w-1/2 mx-auto my-7">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            Teddington Hockey Club is delighted to have a number of officially appointed suppliers for
+            club kit, hockey equipment and sticks.
+            
           </p>
         </div>
         <!-- card -->
@@ -405,7 +396,7 @@
               <div>
                 <img src="images/review.png" alt="">
                 <h3 class="text-xl text-heading font-extrabold my-4">World Cup Flags Football</h3>
-                <p class="font-medium leading-6 text-gray-400 mb-4">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                <p class="font-medium leading-6 text-gray-400 mb-4">Our popular product they you may like. These are top quality Products</p>
                 <div class="flex gap-4">
                   <p class="text-primary font-extrabold">Price - $22.00</p>
                   <div class="flex gap-2 items-center">
@@ -425,7 +416,7 @@
               <div>
                 <img src="images/review.png" alt="">
                 <h3 class="text-xl text-heading font-extrabold my-4">World Cup Flags Football</h3>
-                <p class="font-medium leading-6 text-gray-400 mb-4">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                <p class="font-medium leading-6 text-gray-400 mb-4">Our popular product they you may like. These are top quality Products</p>
                 <div class="flex gap-4">
                   <p class="text-primary font-extrabold">Price - $22.00</p>
                   <div class="flex gap-2 items-center">
@@ -445,7 +436,7 @@
               <div>
                 <img src="images/review.png" alt="">
                 <h3 class="text-xl text-heading font-extrabold my-4">World Cup Flags Football</h3>
-                <p class="font-medium leading-6 text-gray-400 mb-4">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                <p class="font-medium leading-6 text-gray-400 mb-4">Our popular product they you may like. These are top quality Products</p>
                 <div class="flex gap-4">
                   <p class="text-primary font-extrabold">Price - $22.00</p>
                   <div class="flex gap-2 items-center">
@@ -465,7 +456,7 @@
               <div>
                 <img src="images/review.png" alt="">
                 <h3 class="text-xl text-heading font-extrabold my-4">World Cup Flags Football</h3>
-                <p class="font-medium leading-6 text-gray-400 mb-4">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                <p class="font-medium leading-6 text-gray-400 mb-4">Our popular product they you may like. These are top quality Products</p>
                 <div class="flex gap-4">
                   <p class="text-primary font-extrabold">Price - $22.00</p>
                   <div class="flex gap-2 items-center">
@@ -485,7 +476,7 @@
               <div>
                 <img src="images/review.png"  alt="">
                 <h3 class="text-xl text-heading font-extrabold my-4">World Cup Flags Football</h3>
-                <p class="font-medium leading-6 text-gray-400 mb-4">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                <p class="font-medium leading-6 text-gray-400 mb-4">Our popular product they you may like. These are top quality Products</p>
                 <div class="flex gap-4">
                   <p class="text-primary font-extrabold">Price - $22.00</p>
                   <div class="flex gap-2 items-center">
@@ -505,7 +496,7 @@
               <div>
                 <img src="images/review.png" alt="">
                 <h3 class="text-xl text-heading font-extrabold my-4">World Cup Flags Football</h3>
-                <p class="font-medium leading-6 text-gray-400 mb-4">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                <p class="font-medium leading-6 text-gray-400 mb-4">Our popular product they you may like. These are top quality Products</p>
                 <div class="flex gap-4">
                   <p class="text-primary font-extrabold">Price - $22.00</p>
                   <div class="flex gap-2 items-center">
@@ -519,15 +510,14 @@
         </div>
       </section>
       <!-- new product part end -->
-      <!-- clints question part start -->
+      <!-- clint question part start -->
       <section class="my-24">
         <div class="text-center border-y-2 border-dashed py-6">
           <h3 class="lg:text-3xl text-2xl font-extrabold text-heading">
             Clients Question
           </h3>
           <p class="font-medium leading-6 text-secondary lg:w-1/2 mx-auto my-7">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            If you have any kinds of questions about our teaching feel free to to ask any question to us. Here are few questions you might ask .
           </p>
         </div>
         <div
@@ -544,8 +534,7 @@
               </div>
               <div class="collapse-content">
                 <p class="text-gray-400">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  We offer World class Equipment to our students so that any Equipment cant be a bother for our teaching.
                 </p>
               </div>
             </div>
@@ -556,8 +545,7 @@
               </div>
               <div class="collapse-content">
                 <p class="text-gray-400">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  We offer World class Equipment to our students so that any Equipment cant be a bother for our teaching.
                 </p>
               </div>
             </div>
@@ -568,8 +556,7 @@
               </div>
               <div class="collapse-content">
                 <p class="text-gray-400">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  We offer World class Equipment to our students so that any Equipment cant be a bother for our teaching.
                 </p>
               </div>
             </div>
@@ -580,8 +567,7 @@
               </div>
               <div class="collapse-content">
                 <p class="text-gray-400">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  We offer World class Equipment to our students so that any Equipment cant be a bother for our teaching.
                 </p>
               </div>
             </div>
@@ -592,20 +578,18 @@
               </div>
               <div class="collapse-content">
                 <p class="text-gray-400">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  We offer World class Equipment to our students so that any Equipment cant be a bother for our teaching.
                 </p>
               </div>
             </div>
             <div class="collapse collapse-plus border-b-2 rounded-none">
               <input type="radio" name="my-accordion-3" />
               <div class="collapse-title text-xl font-bold text-heading">
-                Pricings
+                Pricing 
               </div>
               <div class="collapse-content">
                 <p class="text-gray-400">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  We offer World class Equipment to our students so that any Equipment cant be a bother for our teaching.
                 </p>
               </div>
             </div>
@@ -616,15 +600,14 @@
               </div>
               <div class="collapse-content">
                 <p class="text-gray-400">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  We offer World class Equipment to our students so that any Equipment cant be a bother for our teaching.
                 </p>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- clints question part end -->
+      <!-- clint question part end -->
       <!-- get in touch part start -->
       <section class="my-24">
         <div class="text-center border-y-2 border-dashed py-6">
@@ -632,8 +615,7 @@
             Get In Touch
           </h3>
           <p class="font-medium leading-6 text-secondary lg:w-1/2 mx-auto my-7">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            If you have any questions about membership, or want to come along to a training session to try us out, please click below to email one of our Membership Managers:
           </p>
         </div>
 
@@ -776,9 +758,7 @@
         <aside class="space-y-5 mr-30">
           <h3 class="text-3xl font-extrabold text-white">Get In Touch</h3>
           <p class="text-gray-400">
-            Dit amet consectetur. Condimentum <br />
-            adipiscing aliquam turpis placerat dolor. Purus <br />
-            urna in sit nullam proin.
+            We are an inclusive hockey club that welcomes all who want to <br>play hockey and be part of a thriving local sports club.
           </p>
           <div class="space-y-4">
             <div
