adding overlay to program section image

--- a/index.html
+++ b/index.html
@@ -324,52 +324,53 @@
         </div>
         <div class="mt-12">
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-7 text-start">
-            <div
-              class="p-10 bg-[url(images/2.png)] lg:px-10 lg:pt-24 lg:pb-10 bg-no-repeat bg-center bg-cover rounded-2xl space-y-7"
-            >
-              <h3 class="text-white text-[28px] font-extrabold">
+            <div class="relative">
+              <div class="p-10 bg-[url(images/2.png)] lg:px-10 lg:pt-24 lg:pb-10 bg-no-repeat bg-center bg-cover rounded-2xl space-y-7 relative">
+                <!-- Your existing content goes here -->
+                <h3 class="text-white text-[28px] font-extrabold relative z-10">
+                  Junior Program
+                </h3>
+                <p class="font-medium leading-6 text-white relative z-10">
+                  We are an inclusive hockey club that welcomes all who want to play hockey and be part of a thriving local sports club.We are an inclusive hockey club that welcomes all who want to play hockey and be part of a thriving local sports club.
+                </p>
+                <button class="btn bg-primary border-none text-white font-bold text-xl relative z-10">
+                  Register Now!
+                </button>
+              </div>
+              <div class="absolute inset-0 bg-[rgba(19,19,24,0.50)] rounded-2xl"></div>
+            </div>
+            <div class="relative">
+              <div class="p-10 bg-[url(images/3.png)] lg:px-10 lg:pt-24 lg:pb-10 bg-no-repeat bg-center bg-cover rounded-2xl space-y-7 relative">
+                <!-- Your existing content goes here -->
+                <h3 class="text-white text-[28px] font-extrabold relative z-10">
+                  Junior Program
+                </h3>
+                <p class="font-medium leading-6 text-white relative z-10">
+                  We are an inclusive hockey club that welcomes all who want to play hockey and be part of a thriving local sports club.We are an inclusive hockey club that welcomes all who want to play hockey and be part of a thriving local sports club.
+                </p>
+                <button class="btn bg-primary border-none text-white font-bold text-xl relative z-10">
+                  Register Now!
+                </button>
+              </div>
+              <div class="absolute inset-0 bg-[rgba(19,19,24,0.50)] rounded-2xl"></div>
+            </div>
+          </div>
+          <div class="relative">
+            <div class="p-10 bg-[url(images/4.png)] lg:px-10 lg:pt-52 lg:pb-10 bg-no-repeat bg-center bg-cover rounded-2xl space-y-7 mt-7 relative">
+              <!-- Your existing content goes here -->
+              <h3 class="text-white text-[28px] font-extrabold relative z-10">
                 Junior Program
               </h3>
-              <p class="font-medium leading-6 text-white">
-                We are an inclusive hockey club that welcomes all who want to play hockey and be part of a thriving local sports club.We are an inclusive hockey club that welcomes all who want to play hockey and be part of a thriving local sports club.
+              <p class="font-medium leading-6 text-white relative z-10">
+                We are an inclusive hockey club that welcomes all who want to play hockey <br> and be part of a thriving local sports club.We are an inclusive hockey <br>club that welcomes all who want to play hockey and be part of a thriving local sports club.
               </p>
-              <button
-                class="btn bg-primary border-none text-white font-bold text-xl"
-              >
+              <button class="btn bg-primary border-none text-white font-bold text-xl relative z-10">
                 Register Now!
               </button>
             </div>
-            <div
-              class="p-10 bg-[url(images/3.png)] lg:px-10 lg:pt-24 lg:pb-10 bg-no-repeat bg-center bg-cover rounded-2xl space-y-7"
-            >
-              <h3 class="text-white text-[28px] font-extrabold">
-                Junior Program
-              </h3>
-              <p class="font-medium leading-6 text-white">
-                We are an inclusive hockey club that welcomes all who want to play hockey and be part of a thriving local sports club.We are an inclusive hockey club that welcomes all who want to play hockey and be part of a thriving local sports club.
-              </p>
-              <button
-                class="btn bg-primary border-none text-white font-bold text-xl"
-              >
-                Register Now!
-              </button>
-            </div>
+            <div class="absolute inset-0 bg-[rgba(19,19,24,0.50)] rounded-2xl"></div>
           </div>
-          <div
-            class="p-10 bg-[url(images/4.png)] lg:px-10 lg:pt-52 lg:pb-10 bg-no-repeat bg-center bg-cover rounded-2xl space-y-7 mt-7"
-          >
-            <h3 class="text-white text-[28px] font-extrabold">
-              Junior Program
-            </h3>
-            <p class="font-medium leading-6 text-white">
-              We are an inclusive hockey club that welcomes all who want to play hockey <br> and be part of a thriving local sports club.We are an inclusive hockey <br>club that welcomes all who want to play hockey and be part of a thriving local sports club.
-            </p>
-            <button
-              class="btn bg-primary border-none text-white font-bold text-xl"
-            >
-              Register Now!
-            </button>
-          </div>
+          
         </div>
       </section>
       <!-- program part end -->
